--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,6 +13,8 @@
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
                 <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
+                <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
+                <li routerLinkActive="active"><a routerLink="/major-class" >Major Class</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
