--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,13 +9,32 @@
             </button>
             <a class="navbar-brand" href="#"><img alt="The Iron Yard" src="assets/images/tiy_logo.png"/></a>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
-                <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
-                <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
-                <li routerLinkActive="active"><a routerLink="/major-class" >Major Class</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="#/">About Us</a></li>
+                <li><a href="#/">Contact Us</a></li>
+                <li><a href="#/">Registration</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
+                        <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
+                        <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
+                        <li routerLinkActive="active"><a routerLink="/major" >Major</a></li>                
+                        <li routerLinkActive="active"><a routerLink="/class" >Classes</a></li>      
+                        <li routerLinkActive="active"><a routerLink="/assignment" >Assignments</a></li>
+                        <li routerLinkActive="active"><a routerLink="/instructor" >Instructors</a></li>                              
+                        <li routerLinkActive="active"><a routerLink="/major-class" >Major Class</a></li>
+                        <li routerLinkActive="active"><a routerLink="/student-class" >Student Class</a></li>            
+                    </ul>
+                </li>
             </ul>
         </div><!--/.nav-collapse -->
+
     </div>
   </nav>
+
