--- a/src/app/major-class/major-class.component.html
+++ b/src/app/major-class/major-class.component.html
@@ -28,8 +28,8 @@
   <tbody>
     <tr *ngFor="let major_class of major_classes">
       <td>{{major_class.major_class_id}}</td>
-      <td>{{major_class.major_id}}</td>
-      <td>{{major_class.class_id}}</td>
+      <td>{{major_class.hasOwnProperty('major_id') ? major_class.major_id.major : '' }}</td>
+      <td>{{major_class.hasOwnProperty('class_id') ? major_class.class_id.subject + ' - ' + major_class.class_id.course : '' }}</td>
       <td class="text-center">
         <a class="btn btn-primary" [routerLink]="['/major-class/edit/', major_class.major_class_id]">Edit</a>&nbsp;
         <button (click)="deleteMajorClass(major_class.major_class_id)" class="btn btn-danger">Delete</button>
