assignment.component.html and student.component.html

--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -25,7 +25,7 @@
       <th>Start Date</th>
       <th>GPA</th>
       <th>SAT Score</th>
-      <th>Major ID</th>
+      <th>Major</th>
       <th>Admin</th>
     </tr>
   </thead>
@@ -37,7 +37,7 @@
       <td>{{student.start_date}}</td>
       <td>{{student.gpa}}</td>
       <td>{{student.sat}}</td>
-      <td>{{student.major_id}}</td>
+      <td>{{student.hasOwnProperty('major_id') ? student.major_id.major : ''}}</td>
       <td class="text-center">
         <a class="btn btn-primary" [routerLink]="['/student/edit/', student.student_id]">Edit</a>&nbsp;
         <button (click)="deleteStudent(student.student_id)" class="btn btn-danger">Delete</button>
