--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -20,20 +20,20 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Student ID</th>
+      <th>Student</th>
       <th>Assignment Number</th>
-      <th>Grade ID</th>
-      <th>Class ID</th>
+      <th>Grade</th>
+      <th>Class</th>
       <th>Admin</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let assignment of assignments">
       <td>{{assignment.assignment_id}}</td>
-      <td>{{assignment.student_id}}</td>
+      <td>{{assignment.hasOwnProperty('student_id') ? assignment.student_id.last_name + ", " + assignment.student_id.first_name : ''}}</td>
       <td>{{assignment.assignment_nbr}}</td>
-      <td>{{assignment.grade_id}}</td>
-      <td>{{assignment.class_id}}</td>
+      <td>{{assignment.hasOwnProperty('grade_id') ? assignment.grade_id.grade : ''}}</td>
+      <td>{{assignment.hasOwnProperty('class_id') ? assignment.class_id.subject + " " + assignment.class_id.course  : ''}}</td>
       <td class="text-center">
         <a class="btn btn-primary" [routerLink]="['/assignment/edit/', assignment.assignment_id]">Edit</a>&nbsp;
         <button (click)="deleteAssignment(assignment.assignment_id)" class="btn btn-danger">Delete</button>
