Instructor form bug fixed

--- a/src/app/instructor/instructor.component.html
+++ b/src/app/instructor/instructor.component.html
@@ -22,7 +22,7 @@
       <th>ID</th>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Major ID</th>
+      <th>Major</th>
       <th>Years of Experience</th>
       <th>Tenured</th>
       <th>Admin</th>
@@ -33,9 +33,9 @@
       <td>{{instructor.instructor_id}}</td>
       <td>{{instructor.first_name}}</td>
       <td>{{instructor.last_name}}</td>
-      <td>{{instructor.major_id}}</td>
+      <td>{{instructor.hasOwnProperty('major_id') ? instructor.major_id.major : ''}}</td>
       <td>{{instructor.years_of_experience}}</td>
-      <td>{{instructor.tenured}}</td>
+      <td>{{(instructor.tenured == 1) ? "Yes" : "No"}}</td>
       <td class="text-center">
         <a class="btn btn-primary" [routerLink]="['/instructor/edit/', instructor.instructor_id]">Edit</a>&nbsp;
         <button (click)="deleteInstructor(instructor.instructor_id)" class="btn btn-danger">Delete</button>
