--- a/src/app/instructor-form/instructor-form.component.html
+++ b/src/app/instructor-form/instructor-form.component.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
+    <label for="major_id" class="col-sm-2 control-label">Major</label>
     <div class="col-sm-10">
       <input [(ngModel)]="instructor.major_id" type="text" class="form-control" id="major_id" name="major_id" placeholder="Major ID" required>
     </div>
@@ -46,7 +46,10 @@
   <div class="form-group">
     <label for="tenured" class="col-sm-2 control-label">Tenured</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="instructor.tenured" type="text" class="form-control" id="tenured" name="tenured" placeholder="Tenured">
+      <select [(ngModel)]="instructor.tenured" class="form-control" id="tenured" name="tenured">
+        <option value="1">Yes</option>
+        <option selected value="2">No</option>
+      </select>
     </div>
   </div>
    <div class="form-group">
