--- a/src/app/assignment-form/assignment-form.component.html
+++ b/src/app/assignment-form/assignment-form.component.html
@@ -33,10 +33,10 @@
   </div>
   <div class="form-group">
     <label for="grade_id" class="col-sm-2 control-label">Grade ID</label>
-    <div class="col-sm-10">
-      <input [(ngModel)]="assignment.grade_id" type="text" class="form-control" id="grade_id" name="grade_id" placeholder="Grade ID" required>
+      <select [compareWith]="compareGradeId" [(ngModel)]="assignment.grade_id" id="grade_id" name="grade_id">
+        <option *ngFor="let grade of grade" [ngValue]= "grade">{{grade.grade}}</option>
+      </select>
     </div>
-  </div>
   <div class="form-group">
     <label for="class_id" class="col-sm-2 control-label">Class ID</label>
     <div class="col-sm-10">
