--- a/src/app/major-class-form/major-class-form.component.html
+++ b/src/app/major-class-form/major-class-form.component.html
@@ -22,6 +22,19 @@
   <input [(ngModel)]="major_class.major_class_id" #major_class_id="ngModel" type="hidden" name="major_class_id">
   
   <div class="form-group">
+    <label for="major_id2" class="col-sm-2 control-label">Major ID</label>
+    <div class="col-sm-10">
+
+      <select>
+        <option *ngFor="let major_class of major_classes">
+          {{major_class.major_id}}
+        </option>
+      </select>
+
+    </div>
+  </div>
+  
+  <div class="form-group">
     <label for="major_id" class="col-sm-2 control-label">Major ID</label>
     <div class="col-sm-10">
       <input [(ngModel)]="major_class.major_id" #major_id="ngModel" type="text" class="form-control" id="major_id" name="major_id" placeholder="Major ID" required>
