--- a/src/app/student-form/student-form.component.html
+++ b/src/app/student-form/student-form.component.html
@@ -51,9 +51,11 @@
   </div>
   <div class="form-group">
     <label for="major_id" class="col-sm-2 control-label">Major ID</label>
-      <select [compareWith]="compareMajorId" [(ngModel)]="student.major_id" id="major_id" name="major_id">
+    <div class="col-sm-10">
+      <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="student.major_id" id="major_id" name="major_id">
         <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
       </select>
+    </div>
       <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
       <!--https://angular.io/api/forms/SelectControlValueAccessor-->
   </div>
