--- a/src/app/class-form/class-form.component.html
+++ b/src/app/class-form/class-form.component.html
@@ -19,12 +19,25 @@
 
 <form (ngSubmit)="saveClass(class.class_id)"  #classForm="ngForm" class="form-horizontal">
   <input [(ngModel)]="class.class_id" type="hidden" name="class_id">
+
   <div class="form-group">
+    <label for="instructor_id" class="col-sm-2 control-label">Instructor</label>
+    <div class="col-sm-10">
+      <select class="form-control" [compareWith]="compareInstructorId" [(ngModel)]="class.instructor_id" id="instructor_id" name="instructor_id">
+        <option *ngFor="let instructor of instructor" [ngValue]= "instructor">{{instructor.last_name}}, {{instructor.first_name}}</option>
+      </select>
+    </div>
+      <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+      <!--https://angular.io/api/forms/SelectControlValueAccessor-->
+  </div>
+
+  <!--<div class="form-group">
     <label for="instructor_id" class="col-sm-2 control-label">Instructor id</label>
     <div class="col-sm-10">
       <input [(ngModel)]="class.instructor_id" #instructor_id="ngModel" type="text" class="form-control" id="instructor_id" name="instructor_id" placeholder="Instructor ID" required>
     </div>
-  </div>
+  </div>-->
+
   <div class="form-group">
     <label for="subject" class="col-sm-2 control-label">Subject</label>
     <div class="col-sm-10">
