--- a/src/app/student-class-form/student-class-form.component.html
+++ b/src/app/student-class-form/student-class-form.component.html
@@ -18,19 +18,45 @@
 </div>
 
 <form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
+<input [(ngModel)]="student_class.student_class_id" type="hidden" name="student_class_id">
+<div class="form-group">
+  <label for="student_id" class="col-sm-2 control-label">Student</label>
+  <div class="col-sm-10">
+    <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="student_class.student_id" id="student_id" name="student_id">
+      <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
+    </select>
+  </div>
+    <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+    <!--https://angular.io/api/forms/SelectControlValueAccessor-->
+</div>
+
+<!--<form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
   <input [(ngModel)]="student_class.student_class_id" type="hidden" name="student_class_id">
   <div class="form-group">
     <label for="student_id" class="col-sm-2 control-label">Student ID</label>
     <div class="col-sm-10">
       <input [(ngModel)]="student_class.student_id" type="text" class="form-control" id="student_id" name="student_id" placeholder="Student ID" required>
     </div>
-  </div>
+  </div>-->
+
   <div class="form-group">
+    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+    <div class="col-sm-10">
+      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="student_class.class_id" id="class_id" name="class_id">
+        <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
+      </select>
+    </div>
+      <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+      <!--https://angular.io/api/forms/SelectControlValueAccessor-->
+  </div>
+
+  <!--<div class="form-group">
     <label for="class_id" class="col-sm-2 control-label">Class ID</label>
     <div class="col-sm-10">
       <input [(ngModel)]="student_class.class_id" type="text" class="form-control" id="class_id" name="class_id"  placeholder="Class ID" required>
     </div>
-  </div>
+  </div>-->
+
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Submit</button>
