--- a/src/app/assignment-form/assignment-form.component.html
+++ b/src/app/assignment-form/assignment-form.component.html
@@ -19,12 +19,16 @@
 
 <form (ngSubmit)="saveAssignment(assignment.assignment_id)"  #assignmentForm="ngForm" class="form-horizontal">
   <input [(ngModel)]="assignment.assignment_id" #assignment_id="ngModel" type="hidden" name="assignment_id">
+
   <div class="form-group">
-    <label for="student_id" class="col-sm-2 control-label">Student ID</label>
-    <div class="col-sm-10">
-      <input [(ngModel)]="assignment.student_id" #student_id="ngModel" type="text" class="form-control" id="student_id" name="student_id" placeholder="Student ID" required>
-    </div>
+   <label for="student_id" class="col-sm-2 control-label">Student</label>
+  <div class="col-sm-10">
+    <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="assignment.student_id" id="student_id" name="student_id">
+      <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
+    </select>
   </div>
+</div>
+
   <div class="form-group">
     <label for="assignment_nbr" class="col-sm-2 control-label">Assignment Number</label>
     <div class="col-sm-10">
@@ -32,17 +36,22 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="grade_id" class="col-sm-2 control-label">Grade ID</label>
-      <select [compareWith]="compareGradeId" [(ngModel)]="assignment.grade_id" id="grade_id" name="grade_id">
+    <label for="grade_id" class="col-sm-2 control-label">Grade</label>
+       <div class="col-sm-10">
+      <select class="form-control" [compareWith]="compareGradeId" [(ngModel)]="assignment.grade_id" id="grade_id" name="grade_id">
         <option *ngFor="let grade of grade" [ngValue]= "grade">{{grade.grade}}</option>
       </select>
+     </div>
     </div>
-  <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+    <div class="form-group">
+    <label for="class_id" class="col-sm-2 control-label">Class</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="assignment.class_id" type="text" class="form-control" id="class_id" name="class_id" placeholder="Class ID">
+      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="assignment.class_id" id="class_id" name="class_id">
+        <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
+      </select>
     </div>
   </div>
+
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Submit</button>
