--- a/src/app/student-form/student-form.component.html
+++ b/src/app/student-form/student-form.component.html
@@ -34,7 +34,7 @@
   <div class="form-group">
     <label for="start_date" class="col-sm-2 control-label">Start Date</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="student.start_date" type="text" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
+      <input [(ngModel)]="student.start_date" type="date" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
     </div>
   </div>
   <div class="form-group">
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
+    <label for="major_id" class="col-sm-2 control-label">Major</label>
     <div class="col-sm-10">
       <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="student.major_id" id="major_id" name="major_id">
         <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
