assignment form partial

--- a/src/app/assignment-form/assignment-form.component.html
+++ b/src/app/assignment-form/assignment-form.component.html
@@ -23,9 +23,12 @@
   <div class="form-group">
    <label for="student_id" class="col-sm-2 control-label">Student</label>
   <div class="col-sm-10">
-    <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="assignment.student_id" id="student_id" name="student_id">
+    <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="assignment.student_id" id="student_id" name="student_id" required>
       <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
     </select>
+     <span *ngIf="formErrors.first_name" class="text-danger">
+          {{ formErrors.student }}
+        </span>
   </div>
 </div>
 
@@ -54,7 +57,7 @@
 
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Submit</button>
+        <button [disabled]="!assignmentForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
 </form>
