--- a/src/app/major-class-form/major-class-form.component.html
+++ b/src/app/major-class-form/major-class-form.component.html
@@ -22,7 +22,7 @@
   <input [(ngModel)]="major_class.major_class_id" #major_class_id="ngModel" type="hidden" name="major_class_id">
 
   <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
+    <label for="major_id" class="col-sm-2 control-label">Major</label>
     <div class="col-sm-10">
       <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="major_class.major_id" id="major_id" name="major_id" required>
         <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
@@ -44,7 +44,7 @@
   </div>-->
 
   <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+    <label for="class_id" class="col-sm-2 control-label">Class</label>
     <div class="col-sm-10">
       <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="major_class.class_id" id="class_id" name="class_id" required>
         <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
