--- a/src/app/major-class/major-class.component.html
+++ b/src/app/major-class/major-class.component.html
@@ -20,8 +20,8 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Major ID</th>
-      <th>Class ID</th>
+      <th>Major</th>
+      <th>Class</th>
       <th>Admin</th>
     </tr>
   </thead>
