--- a/src/app/student-class-form/student-class-form.component.html
+++ b/src/app/student-class-form/student-class-form.component.html
@@ -43,7 +43,7 @@
   </div>-->
 
   <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+    <label for="class_id" class="col-sm-2 control-label">Class</label>
     <div class="col-sm-10">
       <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="student_class.class_id" id="class_id" name="class_id" required>
         <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
