--- a/src/app/student-class/student-class.component.html
+++ b/src/app/student-class/student-class.component.html
@@ -20,8 +20,8 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Student ID</th>
-      <th>Class ID</th>
+      <th>Student</th>
+      <th>Class</th>
       <th>Admin</th>
     </tr>
   </thead>
