--- a/src/app/grade-form/grade-form.component.html
+++ b/src/app/grade-form/grade-form.component.html
@@ -22,12 +22,15 @@
   <div class="form-group">
     <label for="grade" class="col-sm-2 control-label">Grade</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="grade.grade" type="text" class="form-control" id="grade" name="grade" placeholder="Grade" required>
+      <input [(ngModel)]="grade.grade" type="text" class="form-control" id="grade" name="grade" placeholder="Grade" required minlength="2">
+    <span *ngIf="formErrors.grade" class="text-danger">
+      {{ formErrors.grade }}
+    </span>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button [disabled]="!gradeForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
 </form>
