--- a/src/app/instructor-form/instructor-form.component.html
+++ b/src/app/instructor-form/instructor-form.component.html
@@ -22,21 +22,30 @@
   <div class="form-group">
     <label for="first_name" class="col-sm-2 control-label">First Name</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="instructor.first_name" #first_name="ngModel" type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required>
+      <input [(ngModel)]="instructor.first_name" #first_name="ngModel" type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required minlength="2" maxlength="30">
+      <span *ngIf="formErrors.first_name" class="text-danger">
+        {{ formErrors.first_name }}
+        </span>
     </div>
   </div>
   <div class="form-group">
     <label for="last_name" class="col-sm-2 control-label">Last Name</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="instructor.last_name" type="text" class="form-control" id="last_name" name="last_name"  placeholder="Last Name" required>
+      <input [(ngModel)]="instructor.last_name" type="text" class="form-control" id="last_name" name="last_name"  placeholder="Last Name" required minlength="2" maxlength="30">
+      <span *ngIf="formErrors.last_name" class="text-danger">
+          {{ formErrors.last_name }}
+        </span>
     </div>
   </div>
   
   <div class="form-group">
     <label for="major_id" class="col-sm-2 control-label">Major</label>
     <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="instructor.major_id" id="major_id" name="major_id">
+      <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="instructor.major_id" id="major_id" name="major_id" required>
         <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
+        <span *ngIf="formErrors.major" class="text-danger">
+          {{ formErrors.major }}
+        </span>
       </select>
     </div>
       <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
@@ -53,21 +62,27 @@
   <div class="form-group">
     <label for="years_of_experience" class="col-sm-2 control-label">Years of Experience</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="instructor.years_of_experience" type="text" class="form-control" id="years_of_experience" name="years_of_experience" placeholder="Years Experience">
+      <input [(ngModel)]="instructor.years_of_experience" type="text" class="form-control" id="years_of_experience" name="years_of_experience" placeholder="Years Experience" required>
+      <span *ngIf="formErrors.years_of_experience" class="text-danger">
+          {{ formErrors.years_of_experience }}
+        </span>
     </div>
   </div>
   <div class="form-group">
     <label for="tenured" class="col-sm-2 control-label">Tenured</label>
     <div class="col-sm-10">
-      <select [(ngModel)]="instructor.tenured" class="form-control" id="tenured" name="tenured">
+      <select [(ngModel)]="instructor.tenured" class="form-control" id="tenured" name="tenured" required>
         <option value="1">Yes</option>
         <option selected value="2">No</option>
       </select>
+      <span *ngIf="formErrors.tenured" class="text-danger">
+          {{ formErrors.tenured }}
+        </span>
     </div>
   </div>
    <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button [disabled]="!instructorForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
 </form>
