--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -24,7 +24,7 @@
                         <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
                         <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
                         <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
-                        <li routerLinkActive="active"><a routerLink="/major" >Major</a></li>                
+                        <li routerLinkActive="active"><a routerLink="/major" >Majors</a></li>                
                         <li routerLinkActive="active"><a routerLink="/class" >Classes</a></li>      
                         <li routerLinkActive="active"><a routerLink="/assignment" >Assignments</a></li>
                         <li routerLinkActive="active"><a routerLink="/instructor" >Instructors</a></li>                              
