updates to class form

--- a/src/app/class/class.component.html
+++ b/src/app/class/class.component.html
@@ -20,7 +20,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Instructor ID</th>
+      <th>Instructor</th>
       <th>Subject</th>
       <th>Course</th>
       <th>Admin</th>
