--- a/src/app/class-form/class-form.component.html
+++ b/src/app/class-form/class-form.component.html
@@ -23,9 +23,12 @@
   <div class="form-group">
     <label for="instructor_id" class="col-sm-2 control-label">Instructor</label>
     <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareInstructorId" [(ngModel)]="class.instructor_id" id="instructor_id" name="instructor_id">
+      <select class="form-control" [compareWith]="compareInstructorId" [(ngModel)]="class.instructor_id" id="instructor_id" name="instructor_id" required>
         <option *ngFor="let instructor of instructor" [ngValue]= "instructor">{{instructor.last_name}}, {{instructor.first_name}}</option>
       </select>
+     <span *ngIf="formErrors.instructor_id" class="text-danger">
+          {{ formErrors.instructor_id }}
+        </span>
     </div>
       <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
       <!--https://angular.io/api/forms/SelectControlValueAccessor-->
@@ -41,13 +44,19 @@
   <div class="form-group">
     <label for="subject" class="col-sm-2 control-label">Subject</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="class.subject" type="text" class="form-control" id="subject" name="subject"  placeholder="Subject" required>
+      <input required maxlength="30" minlength="2" [(ngModel)]="class.subject" type="text" class="form-control" id="subject" name="subject"  placeholder="Subject" >
+     <span *ngIf="formErrors.subject" class="text-danger">
+          {{ formErrors.subject }}
+        </span>
     </div>
   </div>
   <div class="form-group">
     <label for="course" class="col-sm-2 control-label">Course</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="class.course" type="text" class="form-control" id="course" name="course" placeholder="Course" required>
+      <input required maxlength="3" [(ngModel)]="class.course" type="text" class="form-control" id="course" name="course" placeholder="Course">
+       <span *ngIf="formErrors.course" class="text-danger">
+          {{ formErrors.course }}
+        </span>
     </div>
   </div>
    <div class="form-group">
