--- a/src/app/assignment-form/assignment-form.component.html
+++ b/src/app/assignment-form/assignment-form.component.html
@@ -26,9 +26,9 @@
     <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="assignment.student_id" id="student_id" name="student_id" required>
       <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
     </select>
-     <span *ngIf="formErrors.first_name" class="text-danger">
+     <span *ngIf="formErrors.student" class="text-danger">
           {{ formErrors.student }}
-        </span>
+     </span>
   </div>
 </div>
 
@@ -36,22 +36,31 @@
     <label for="assignment_nbr" class="col-sm-2 control-label">Assignment Number</label>
     <div class="col-sm-10">
       <input [(ngModel)]="assignment.assignment_nbr" type="text" class="form-control" id="assignment_nbr" name="assignment_nbr"  placeholder="Assignment Number" required>
+     <span *ngIf="formErrors.assignment_nbr" class="text-danger">
+          {{ formErrors.assignment_nbr }}
+     </span>
     </div>
   </div>
   <div class="form-group">
     <label for="grade_id" class="col-sm-2 control-label">Grade</label>
        <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareGradeId" [(ngModel)]="assignment.grade_id" id="grade_id" name="grade_id">
+      <select class="form-control" [compareWith]="compareGradeId" [(ngModel)]="assignment.grade_id" id="grade_id" name="grade_id" required>
         <option *ngFor="let grade of grade" [ngValue]= "grade">{{grade.grade}}</option>
       </select>
+       <span *ngIf="formErrors.grade" class="text-danger">
+          {{ formErrors.grade }}
+     </span>
      </div>
     </div>
     <div class="form-group">
     <label for="class_id" class="col-sm-2 control-label">Class</label>
     <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="assignment.class_id" id="class_id" name="class_id">
+      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="assignment.class_id" id="class_id" name="class_id" required>
         <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
       </select>
+       <span *ngIf="formErrors.classObj" class="text-danger">
+          {{ formErrors.classObj }}
+     </span>
     </div>
   </div>
 
