--- a/src/app/major-form/major-form.component.html
+++ b/src/app/major-form/major-form.component.html
@@ -18,13 +18,19 @@
   <div class="form-group">
     <label for="major" class="col-sm-2 control-label">Major</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="major.major" type="text" class="form-control" id="major" name="major" placeholder="Major" required>
+      <input [(ngModel)]="major.major" type="text" class="form-control" id="major" name="major" placeholder="Major" required required minlength="2" maxlength="30">
+      <span *ngIf="formErrors.major" class="text-danger">
+          {{ formErrors.major }}
+        </span>
     </div>
   </div>
    <div class="form-group">
     <label for="sat" class="col-sm-2 control-label">SAT</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="major.sat" type="text" class="form-control" id="sat" name="sat" placeholder="SAT" required>
+      <input [(ngModel)]="major.sat" type="text" class="form-control" id="sat" name="sat" placeholder="SAT" required pattern="([4-8][0-9]{2}|9[0-8][0-9]|99[0-9]|1[0-5][0-9]{2}|1600)" maxlength="4">
+      <span *ngIf="formErrors.sat" class="text-danger">
+          {{ formErrors.sat }}
+        </span>
     </div>
    </div>
      <div class="form-group">
