--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-<ol class="breadcrumb">
-    <li class="active">Home</li>
-</ol>
+<section @fadeInAnimation>
+    <ol class="breadcrumb">
+        <li class="active">Home</li>
+    </ol>
 
-<br/>
+    <br/>
 
-Welcome to the college admin
+    Welcome to the college admin
+</section>
