animations major and assignments

--- a/src/app/assignment-form/assignment-form.component.html
+++ b/src/app/assignment-form/assignment-form.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/assignment">Assignments</a></li>
@@ -70,3 +71,4 @@
     </div>
   </div>
 </form>
+</section>
