--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li class="active">Assignments</li>
@@ -41,3 +42,4 @@
     </tr>
   </tbody>
 </table>
+</section>
