--- a/src/app/major-form/major-form.component.html
+++ b/src/app/major-form/major-form.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/major">Majors</a></li>
@@ -39,3 +40,4 @@
     </div>
      </div>
 </form>
+</section>
