--- a/src/app/major/major.component.html
+++ b/src/app/major/major.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Major</a></li>
     <li class="active">Major</li>
@@ -37,3 +38,4 @@
     </tr>
   </tbody>
 </table>
+</section>
