animation added for instructor and instructor form

--- a/src/app/instructor-form/instructor-form.component.html
+++ b/src/app/instructor-form/instructor-form.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/instructor">Instructors</a></li>
@@ -86,3 +87,4 @@
     </div>
   </div>
 </form>
+</section>
