--- a/src/app/instructor/instructor.component.html
+++ b/src/app/instructor/instructor.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li class="active">Instructors</li>
@@ -43,3 +44,4 @@
     </tr>
   </tbody>
 </table>
+</section>
