--- a/src/app/class-form/class-form.component.html
+++ b/src/app/class-form/class-form.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/class">Classes</a></li>
@@ -65,3 +66,4 @@
     </div>
   </div>
 </form>
+</section>
