--- a/src/app/class/class.component.html
+++ b/src/app/class/class.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li class="active">Classes</li>
@@ -39,3 +40,4 @@
     </tr>
   </tbody>
 </table>
+</section>
