--- a/src/app/grade-form/grade-form.component.html
+++ b/src/app/grade-form/grade-form.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/grade">Grades</a></li>
@@ -34,3 +35,4 @@
     </div>
   </div>
 </form>
+</section>
