--- a/src/app/grade/grade.component.html
+++ b/src/app/grade/grade.component.html
@@ -1,3 +1,4 @@
+<section @fadeInAnimation>
 <ol class="breadcrumb">
     <li><a routerLink="/home">Home</a></li>
     <li class="active">Grades</li>
@@ -35,3 +36,4 @@
     </tr>
   </tbody>
 </table>
+</section>
