--- a/src/app/major-class-form/major-class-form.component.html
+++ b/src/app/major-class-form/major-class-form.component.html
@@ -8,7 +8,7 @@
 
   <br/>
 
-  <a class="btn btn-primary" routerLink="/major-class">Return to Major Classs</a>
+  <a class="btn btn-primary" routerLink="/major-class">Return to Major Class</a>
 
   <h1>Manage Major Class</h1>
 
