home page photos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,43 @@
         <li class="active">Home</li>
     </ol>
 
-    <br/>
+  <div class="jumbotron">
+  <div class="container">
+   <h1>Welcome to the University Administration Site</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="../../assets/images/student2.jpeg">
+      <div class="caption">
+        <h3>Explore</h3>
+        <p>Students are great!</p>
+      </div>
+    </div>
+  </div>
+    <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="../../assets/images/teach2.jpeg">
+      <div class="caption">
+        <h3>Teach</h3>
+        <p>Instructors are great!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="../../assets/images/books.jpeg">
+      <div class="caption">
+        <h3>Learn</h3>
+        <p>Majors are great!</p>
+      </div>
+    </div>
+  </div>
 
-    Welcome to the college admin
+  </div>
+
+
+
+
 </section>
