--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,15 +13,12 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="#/">About Us</a></li>
-                <li><a href="#/">Contact Us</a></li>
-                <li><a href="#/">Registration</a></li>
+                
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration Options <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
                         <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
                         <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
                         <li routerLinkActive="active"><a routerLink="/major" >Majors</a></li>                
